Added MakeDiner.xmi for testing, improved debugging with OCL, and more

--- a/ut_ss_week1/plugin.xml
+++ b/ut_ss_week1/plugin.xml
@@ -10,8 +10,7 @@
       <!-- @generated ActivityDiagram -->
       <package
             uri="www.example.org/activityDiagram"
-            class="ActivityDiagram.ActivityDiagramPackage"
-            genModel="model/ActivityDiagram.genmodel"/>
+            class="ActivityDiagram.ActivityDiagramPackage"/>
    </extension>
 
 </plugin>
