--- a/ut_ss_week1/.project
+++ b/ut_ss_week1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ut_ss_week1</name>
+	<name>umlad2javacc</name>
 	<comment></comment>
 	<projects>
 	</projects>
